--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>EXAMPLE</title>
+    <title>AFRAME CHROMA KEY</title>
 
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
 
-    <link rel="stylesheet" href="styles/example.css">
+    <link rel="stylesheet" href="styles/test.css">
   </head>
   <body>
-    <h1>EXAMPLE</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p><img src="media/example.gif" alt="" /></p>
+    <!-- AFRAME Scene -->
+    <a-scene>
+      <a-assets>
+        <img id="sky" src="media/world.jpg">
+      </a-assets>
+      <a-camera position="0 0 0">
+        <a-cursor color="#ffffff">
+      </a-camera>
+      <a-sky src="#sky"></a-sky>
+      <a-plane color="#ff0000" width="16" height="9" position="0 2 -15" rotation="0 0 0"></a-plane>
+    </a-scene>
 
-    <script src="scripts/root.built.js"></script>
-    <script src="scripts/folder/folder.built.js"></script>
+    <!-- Video Texture-->
+    <video id="video-element" width="160" height="90" preload="auto" muted autoplay playsinline loop>
+      <source src="media/meow-machine.mp4" type="video/mp4">
+    </video>
+    <canvas id="video-canvas" width="160" height="90"></canvas>
+
+    <script src="scripts/libs.built.js"></script>
+    <script src="scripts/test.built.js"></script>
   </body>
 </html>
