Chroma key working good enough.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- AFRAME Scene -->
-    <a-scene>
+    <!--a-scene>
       <a-assets>
         <img id="sky" src="media/world.jpg">
       </a-assets>
@@ -24,13 +24,13 @@
       </a-camera>
       <a-sky src="#sky"></a-sky>
       <a-plane color="#ff0000" width="16" height="9" position="0 2 -15" rotation="0 0 0"></a-plane>
-    </a-scene>
+    </a-scene-->
 
     <!-- Video Texture-->
-    <video id="video-element" width="160" height="90" preload="auto" muted autoplay playsinline loop>
+    <video id="video-element" width="596" height="336" preload="auto" muted autoplay playsinline loop>
       <source src="media/meow-machine.mp4" type="video/mp4">
     </video>
-    <canvas id="video-canvas" width="160" height="90"></canvas>
+    <canvas id="video-canvas" width="596" height="336"></canvas>
 
     <script src="scripts/libs.built.js"></script>
     <script src="scripts/test.built.js"></script>
