--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- AFRAME Scene -->
-    <!--a-scene>
+    <a-scene>
       <a-assets>
         <img id="sky" src="media/world.jpg">
       </a-assets>
@@ -23,8 +23,8 @@
         <a-cursor color="#ffffff">
       </a-camera>
       <a-sky src="#sky"></a-sky>
-      <a-plane color="#ff0000" width="16" height="9" position="0 2 -15" rotation="0 0 0"></a-plane>
-    </a-scene-->
+      <a-plane material="src: #video-canvas; transparent: true;" width="16" height="9" position="0 2 -15" rotation="0 0 0"></a-plane>
+    </a-scene>
 
     <!-- Video Texture-->
     <video id="video-element" width="596" height="336" preload="auto" muted autoplay playsinline loop>
