Some more tweaks.

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         <a-cursor color="#ffffff">
       </a-camera>
       <a-sky src="#sky"></a-sky>
-      <a-plane material="src: #video-canvas; transparent: true;" width="16" height="9" position="0 2 -15" rotation="0 0 0"></a-plane>
+      <a-plane material="src: #video-canvas; transparent: true; side: double;" width="16" height="9" position="0 0 -15" rotation="0 0 0"></a-plane>
     </a-scene>
 
     <!-- Video Texture-->
